--- a/src/app/features/auth/register/register.component.html
+++ b/src/app/features/auth/register/register.component.html
@@ -225,25 +225,36 @@
                             del Carnet de Extranjería en PDF</span>
                         <span class="required">*</span>
                     </label>
-                    <div class="file-upload-box" (click)="fileInput.click()"
-                        [class.is-invalid]="isFieldInvalid(step1Form, 'dniFile')">
-                        <span class="file-placeholder" *ngIf="!step1Form.get('dniFile')?.value">Selecciona un archivo
-                            5mb max</span>
-                        <span class="file-placeholder" *ngIf="step1Form.get('dniFile')?.value"
-                            style="color: #0d9488; font-weight: 500;">
-                            {{ step1Form.get('dniFile')?.value?.name }}
-                        </span>
+                    <div class="file-upload-box" (click)="!isUploadingFile && fileInput.click()"
+                        [class.is-invalid]="isFieldInvalid(step1Form, 'dniFile')" [class.uploading]="isUploadingFile">
+
                         <input type="file" #fileInput style="display: none" (change)="onFileSelected($event)"
                             accept=".pdf,image/*">
-                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M21 15V19C21 19.5304 20.7893 20.0391 20.4142 20.4142C20.0391 20.7893 19.5304 21 19 21H5C4.46957 21 3.96086 20.7893 3.58579 20.4142C3.21071 20.0391 3 19.5304 3 19V15"
-                                stroke="#4B5563" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                            <path d="M17 8L12 3L7 8" stroke="#4B5563" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round" />
-                            <path d="M12 3V15" stroke="#4B5563" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round" />
-                        </svg>
+
+                        <div *ngIf="isUploadingFile" class="upload-loading">
+                            <span class="spinner-border spinner-border-sm me-2"></span>
+                            <span>Subiendo...</span>
+                        </div>
+
+                        <ng-container *ngIf="!isUploadingFile">
+                            <span class="file-placeholder" *ngIf="!step1Form.get('dniFile')?.value">Selecciona un
+                                archivo
+                                5mb max</span>
+                            <span class="file-placeholder" *ngIf="step1Form.get('dniFile')?.value"
+                                style="color: #0d9488; font-weight: 500;">
+                                {{ step1Form.get('dniFile')?.value?.name }}
+                            </span>
+                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M21 15V19C21 19.5304 20.7893 20.0391 20.4142 20.4142C20.0391 20.7893 19.5304 21 19 21H5C4.46957 21 3.96086 20.7893 3.58579 20.4142C3.21071 20.0391 3 19.5304 3 19V15"
+                                    stroke="#4B5563" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                                <path d="M17 8L12 3L7 8" stroke="#4B5563" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                                <path d="M12 3V15" stroke="#4B5563" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>
+                        </ng-container>
                     </div>
                     <div class="invalid-feedback" *ngIf="isFieldInvalid(step1Form, 'dniFile')">
                         <span *ngIf="step1Form.get('dniFile')?.errors?.['required']">El archivo del documento es
