--- a/src/app/features/dashboard/profile/pages/general-info/general-info.component.html
+++ b/src/app/features/dashboard/profile/pages/general-info/general-info.component.html
@@ -12,7 +12,7 @@
         <div class="section-content card">
 
             <!-- Top Grid: Avatar + Summary -->
-            <form [formGroup]="infoForm" class="info-form">
+            <form [formGroup]="personalForm" class="info-form">
 
                 <div class="top-grid-layout">
                     <!-- Avatar Column -->
@@ -239,7 +239,7 @@
         </div>
 
         <!-- Right: Form Card -->
-        <div class="section-content card" [formGroup]="infoForm">
+        <div class="section-content card" [formGroup]="locationForm">
             <div class="grid-form">
                 <div class="row-2-col">
                     <div class="form-group">
