--- a/src/app/features/landing/components/hero/hero.component.html
+++ b/src/app/features/landing/components/hero/hero.component.html
@@ -11,10 +11,11 @@
             <!-- BUSCADOR -->
             <div class="search-box">
                 <div class="search-input-wrapper">
-                    <input type="text" placeholder="Buscar por nombre o especialidad..." aria-label="Buscar">
-                    <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                        viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                        stroke-linejoin="round">
+                    <input type="text" [(ngModel)]="searchText" (keyup.enter)="onSearch()"
+                        placeholder="Buscar por nombre o especialidad..." aria-label="Buscar">
+                    <svg class="search-icon" (click)="onSearch()" style="cursor: pointer;"
+                        xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <circle cx="11" cy="11" r="8"></circle>
                         <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
                     </svg>
