--- a/src/app/features/search/pages/researcher-profile/researcher-profile.component.html
+++ b/src/app/features/search/pages/researcher-profile/researcher-profile.component.html
@@ -1,5 +1,13 @@
 <app-landing-header></app-landing-header>
-<div class="page-container">
+
+<div class="page-container" *ngIf="isLoading">
+    <div class="loading-spinner-wrapper">
+        <div class="spinner"></div>
+        <p>Cargando perfil del investigador...</p>
+    </div>
+</div>
+
+<div class="page-container" *ngIf="!isLoading">
     <div class="breadcrumb-row">
         <a routerLink="/search" class="back-link">
             <span class="icon">‹</span> Ir al buscador
@@ -13,4 +21,5 @@
         [boardExperience]="boardExperience" [projects]="projects" [scientificProduction]="scientificProduction"
         [languages]="languages" [thesisAdvisory]="thesisAdvisory" [thesisJury]="thesisJury"></app-researcher-cv>
 </div>
+
 <app-footer></app-footer>
