--- a/src/app/shared/components/researcher-cv/researcher-cv.component.scss
+++ b/src/app/shared/components/researcher-cv/researcher-cv.component.scss
@@ -104,6 +104,19 @@
                 height: 100%;
                 object-fit: cover;
             }
+
+            .initials-placeholder {
+                width: 100%;
+                height: 100%;
+                background-color: #BAE6FD;
+                color: #0369A1;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: 5rem;
+                font-weight: 700;
+                letter-spacing: 2px;
+            }
         }
     }
 }
